--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 == Apress Source Code
 
-This repository accompanies book *Java for Absolute Beginners* (http://www.apress.com/...) by Iuliana Cosmina(Apress, 2018).
+This repository accompanies book *Java for Absolute Beginners* (https://www.apress.com/in/book/9781484237779) by Iuliana Cosmina(Apress, 2018).
 
 image::java-for-beginners.png[Cover image]
 
