--- a/Contributing.adoc
+++ b/Contributing.adoc
@@ -2,7 +2,7 @@
 
 Copyright for Apress source code belongs to the author(s). However, under fair use you are encouraged to fork and contribute minor corrections and updates for the benefit of the author(s) and other readers.
 
-== How to Contribute
+=== How to Contribute
 
 * Make sure you have a GitHub account.
 * Fork the repository for the relevant book.
@@ -12,3 +12,24 @@ Copyright for Apress source code belongs to the author(s). However, under fair u
 * Submit a pull request.
 
 Thank you for your contribution!
+
+== Contributing to the Book Contents
+
+Copyright for Apress book content belongs to the Apress and author(s). However, under fair use you are encouraged to contribute minor corrections and updates for the benefit of the author(s) and other readers.
+
+
+=== How to Contribute
+
+If you notice any mistakes or confusing phrasing in the book contents, first consult the Errata in this repository and make sure the mistake was not already covered there.
+
+If the mistake you noticed is not in the Errata, write to the author directly mailto:iuliana.cosmina@gmail.com[iuliana.cosmina@gmail.com] and submit your observation. If a correction or clarification is necessary, the change will be added to the Errata together with mention of your contribution.
+Please provide chapter and page number where you found the error.
+If the book gets a new revision, your name will appear in the '*Acknowledgements*' page.
+
+Thank you for your contribution!
+
+== Current list of contributors
+
+The list below contains the list of people that have found errors in the previous edition of the book and submitted them to the author and made sure the second edition was better.
+
+* Vesa Kauranen
